--- a/.github/workflows/python-coverage-testing.yaml
+++ b/.github/workflows/python-coverage-testing.yaml
@@ -27,5 +27,5 @@ jobs:
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
     - name: Test with pytest coverage (build fail if coverage is less than 90%)
       run: |
-        pytest --cov=.
+        coverage run -m pytest
         coverage report --fail-under=90
